--- a/Ruta/Borrador_Clase1.ipynb
+++ b/Ruta/Borrador_Clase1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNa1b0R7M+r1XjQF1637YAX",
+      "authorship_tag": "ABX9TyM/Dh17JpSuuP5DSP+FMM2n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,10 @@
         "## Este es un titulo\n",
         "### Este es un titulo\n",
         "Este es un titulo\n",
-        "<img src=\"\" alt=\"HTML5 Icon\" width=\"600\" height=\"350\" >*texto en cursiva*"
+        "\n",
+        "\n",
+        "\n",
+        "<img src=\"https://images.unsplash.com/photo-1593288942460-e321b92a6cde?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8&w=1000&q=80\" alt=\"HTML5 Icon\" width=\"600\" height=\"350\" >"
       ],
       "metadata": {
         "id": "OdVUbEJ6XvDY"
